# RiotCat

./: CMakeLists.txt  Character.cpp  Character.h  Clock.cpp  Clock.h  Drawing.cpp  Drawing.h  Files.cpp  Files.h  Input.cpp  Input.h  Tiles.h  Window.cpp  Window.h  main.cpp  readme.md
release/: .ninja_deps  .ninja_log  CMakeCache.txt  MyFirstMap.rc  build.ninja  cmake_install.cmake
release/.cmake/api/v1/reply/: cache-v2-e46455fdad1347f1ffbd.json  cmakeFiles-v1-1e596be2691dc48558f2.json  codemodel-v2-5358abc4b675385f7f2b.json  index-2022-11-03T08-46-56-0880.json  target-Editor-Release-7b9d7a25d26c3a819853.json  target-RiotCat-Release-432f72ecebfc8292e975.json
src/: Clock.h  Input.cpp  Input.h  Rect.cpp  Tiles.cpp  Tiles.h  editor.cpp  main.cpp
src/RiotCat/: Camera.cpp  Camera.h  Character.cpp  Character.h  Clock.cpp  Clock.h  Drawing.cpp  Drawing.h  Files.cpp  Files.h  Gameworld.cpp  Gameworld.h  Input.cpp  Input.h  Rect.cpp  Rect.h  Tile.cpp  Tile.h  Window.cpp  Window.h  vec2.h
src/RiotCat/editor/: ETilemap.cpp  ETilemap.h  Ghost.cpp  Ghost.h
src/editor/: ETiles.cpp  ETiles.h
